--- a/client/src/components/Projects/ProjectsItem/ProjectsItemComponent.css
+++ b/client/src/components/Projects/ProjectsItem/ProjectsItemComponent.css
@@ -40,6 +40,17 @@
     margin-bottom: 15px;
 }
 
+.heroku-note {
+    margin-bottom: 5px;
+    font-size: 1.1em;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.heroku-msg {
+    font-size: .9em;
+}
+
 @media screen and (max-width: 1350px) {
     .project-card {
         min-width: 300px;
