--- a/client/src/components/Projects/ProjectsItem/ProjectsItemComponent.css
+++ b/client/src/components/Projects/ProjectsItem/ProjectsItemComponent.css
@@ -1,79 +1,74 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu&display=swap');
 
-.project-card {
-    width: 400px;
-    margin: 20px 20px;
-    transition: .3s;
+.project-item {
+    width: 450px; height: 250px;
+    position: relative;
+    overflow: hidden;
 }
 
-.project-card:hover {
-    box-shadow: 1px 1px 4px -1px rgba(0, 0, 0, 0.6)
+.project-item:hover .overlay-top,
+.projects-item:focus .overlay-top {
+    transform: translateY(0%);
+    opacity: 1;
 }
 
-.project-card-btn-group {
-    display: block;
-    width: 100%;
-    margin-top: 30px;
+.project-item:hover .overlay-bottom,
+.projects-item:focus .overlay-bottom {
+    transform: translateY(100%);
+    opacity: 1;
 }
 
-.project-card-btn-group a {
-    width: 50%;
-    font-size: 1.2em;
-    padding: 20px 0;
+.project-item img {
+    width: 100%; height: 100%;
+    z-index: 0;
 }
 
-.tech-flex {
-    flex-wrap: wrap;
-}
-
-.tech-box {
-    padding: 10px 5px;
-    margin-right: 10px; 
-    border-radius: 5px;
+.project-item .hover-me {
+    background: rgba(0, 0, 0, 0.4);
     color: white;
-    background: var(--blue);
+    z-index: 0;
+    position: absolute; bottom: 0; left: 0;
+    width: 100%; height: auto;
+}
+
+.project-item .hover-me h6 {
     font-size: .9em;
+    margin: 2px; line-height: 15px;
 }
 
-.item-header {
-    margin-top: 15px;
-    margin-bottom: 15px;
+.project-item-overlay {
+    width: 450px; height: 50%;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+    backdrop-filter: blur(5px);
+    opacity: 0;
+
+    transition: all .5s;
 }
 
-.heroku-note {
-    margin-bottom: 5px;
-    font-size: 1.1em;
-    margin-bottom: 10px;
-    cursor: pointer;
+.overlay-top {
+    transform: translateY(-100%);
 }
 
-.heroku-msg {
-    font-size: .9em;
+.overlay-top h5 {
+    color: white;
 }
 
-@media screen and (max-width: 1350px) {
-    .project-card {
-        min-width: 300px;
-    }
+.overlay-bottom {
+    transform: translateY(200%);
+}
 
-    .tech-box {
-        display: none;
-    }
+.overlay-bottom button {
+    background: initial;
+    box-shadow: none;
+    border: 2px solid white;
+    transition: all .350s;
+    border-radius: 0;
+}
 
-    .tech-header {
-        display: none;
-    }
-
-    .tech-box {
-        font-size: .7em;
-    }
-
-    .item-header {
-        margin: 0 0 10px 0;
-        font-size: 1.5em;
-    }
-
-    .project-card-btn-group a {
-        font-size: 1em;
-    }
+.overlay-bottom button:hover {
+    background: white;
+    border: 2px solid white;
+    color: black;
 }
