--- a/client/src/components/Projects/ProjectsComponent.css
+++ b/client/src/components/Projects/ProjectsComponent.css
@@ -2,8 +2,7 @@
     position: absolute; top: 0; left: 0;
     z-index: 9999999999999999999;
     background: rgb(230, 230, 230);
-    width: 100%; height: auto;
-    min-height: 100vh;
+    width: 100%; height: 100vh; min-height: 100%;
 }
 
 .opening-projects {
