--- a/client/src/components/Projects/ProjectsItem/ProjectsItemComponent.css
+++ b/client/src/components/Projects/ProjectsItem/ProjectsItemComponent.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Ubuntu&display=swap');
-
 .project-item {
     width: 450px; height: 250px;
     position: relative;
@@ -37,7 +35,7 @@
 }
 
 .project-item-overlay {
-    width: 450px; height: 50%;
+    width: 100%; height: 50%;
     position: absolute;
     background: rgba(0, 0, 0, 0.6);
     z-index: 1;
@@ -71,4 +69,16 @@
     background: white;
     border: 2px solid white;
     color: black;
+}
+
+@media screen and (max-width: 490px) {
+    .project-item {
+        width: 350px; height: 200px;
+    }
+}
+
+@media screen and (max-width: 390px) {
+    .project-item {
+        width: 300px; height: 175px;
+    }
 }
