--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -4,3 +4,16 @@
     width: 100%; height: 100%;
     background: rgba(20, 20, 20, 0.6)
 }
+
+.form-error {
+    background: red;
+    color: white;
+    padding: 5px;
+    border-radius: 3px;
+    animation: show .2s forwards;
+}
+
+@keyframes show {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
