--- a/client/src/components/Shared/Input/InputComponent.css
+++ b/client/src/components/Shared/Input/InputComponent.css
@@ -7,7 +7,8 @@
     outline: none;
     color: white;
     padding: 0;
-    width: 60%;
+    width: auto;
+    min-width: 600px;
     display: inline-block;
 }
 
