--- a/client/src/components/Projects/ProjectsItem/ProjectsItemComponent.css
+++ b/client/src/components/Projects/ProjectsItem/ProjectsItemComponent.css
@@ -2,6 +2,16 @@
     width: 450px; height: 250px;
     position: relative;
     overflow: hidden;
+    background: rgb(200, 200, 200);
+}
+
+.project-item__edit {
+    cursor: pointer;
+    transition: background .5s;
+}
+
+.project-item__edit:hover {
+    background: rgb(150, 150, 150)
 }
 
 .project-item:hover .overlay-top,
